--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,110 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Arthur Atangana
     - name: Languages
-      value: English, German
+      value: English, French
 
-- title: Education
+- title: Skills
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Programming Languages
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Python, Java, C, postgreSQL, Bash, Visual Basic, JavaScript
+    - title: Frameworks and Tools
       description:
-        - Description 1.
-        - Description 2.
+        - Git, AWS (Cloudformation, SAM, EC2, S3, Lambda, dynamoDB, CloudFront)
+          Linux, Docker, JIRA, Bitbucket,
+          Pytest, JUnit
+          Pandas, Numpy, Selenium,
+          Raspberry Pi, ARM Microcontrollers
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: DevOps Engineer Co-op
+      institution: ProntoForms
+      year: January 2023 - April 2023
+      description:
+        - Developed security filters in Python that enabled custom monitoring for specific AWS instances.
+        - Addressed production bugs and features in Docker containers and existing AWS and 3rd party services 
+          using Kanban to prioritize tasks and utilizing CI/CD pipelines to rapidly iterate.
+        - Optimized repository secret scanner using Bash scripting, reducing security alerts by 50%.
+        - Increased test coverage using Pytest for multiple deployment Bitbucket pipelines.
+#        - title: Description 3.
+#          contents:
+#            - Sub-description 1.
+#            - Sub-description 2.
+    - title: Junior Software Developer
+      institution: ISED Canada
+      year: 2020 - 2022
       description:
         - Description 1.
         - Description 2.
-        - title: Description 3.
+
+    - title: Research Intern
+      institution: Ericsson Inc.
+      year: May 2019 - August 2019
+      description:
+        - Description 1.
+        - Description 2.
+
+    - title: Junior Project Officer
+      institution: International Telecommunication Union
+      year: September 2018 - May 2019
+      description:
+        - Description 1.
+        - Description 2.
+
+
+- title: Education
+  type: time_table
+  contents:
+    - title: Bachelor of Engineering in Software Engineering
+      institution: Carleton University, Ottawa, Canada
+      year: 2020-2025
+      description:
+        - Dean's List since 2020.
+        - title: Course Work":"
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            - Data Structures and Algorithms, OOP, Discrete Structure, Operating Systems
+    - title: Bachelor of Social Sciences in Political Science and History
+      institution: University of Ottawa, Ottawa, Canada
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
+        - Gradutated Cum Laude.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Projects
   type: time_table
   contents:
     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
       year: 2015-now
       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+#
+#- title: Honors and Awards
+#  type: time_table
+#  contents:
+#    - year: 1921
+#      items:
+#        - Nobel Prize in Physics
+#        - Matteucci Medal
+#    - year: 2029
+#      items:
+#        - Max Planck Medal
+#
+#- title: Academic Interests
+#  type: nested_list
+#  contents:
+#    - title: Topic 1.
+#      items:
+#        - Description 1.
+#        - Description 2.
+#    - title: Topic 2.
+#      items:
+#        - Description 1.
+#        - Description 2.
+#
+#- title: Other Interests
+#  type: list
+#  contents:
+#    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
