--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -72,16 +72,16 @@
         - Data Structures and Algorithms, OOP, Discrete Structure, Operating Systems
     - title: Bachelor of Social Sciences in Political Science and History
       institution: University of Ottawa, Ottawa, Canada
-      year: 2019
+      year: 2015 - 2019
       description:
         - Gradutated Cum Laude.
 
-- title: Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+#- title: Projects
+#  type: time_table
+#  contents:
+#    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#      year: 2015-now
+#      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 #
 #- title: Honors and Awards
 #  type: time_table
